auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: microservices
  labels:
    app: auth-service
    tier: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
        tier: app
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: auth-service
          image: auth-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8081
          resources:
            requests:
              cpu: 150m
              memory: 384Mi
            limits:
              cpu: 400m
              memory: 768Mi

          startupProbe:
            tcpSocket:
              port: 8081
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8081
            initialDelaySeconds: 60
          readinessProbe:
            tcpSocket:
              port: 8081
            initialDelaySeconds: 30
