order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: microservices
  labels:
    app: order-service
    tier: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
        tier: app
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: order-service
          image: order-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8083
          volumeMounts:
            - name: kafka-ca-cert
              mountPath: /tmp/kafka
              readOnly: true
          resources:
            requests:
              cpu: 150m
              memory: 384Mi
            limits:
              cpu: 400m
              memory: 768Mi
          startupProbe:
            tcpSocket: { port: 8083 }
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            tcpSocket: { port: 8083 }
            initialDelaySeconds: 60
          readinessProbe:
            tcpSocket: { port: 8083 }
            initialDelaySeconds: 30
      volumes:
        - name: kafka-ca-cert
          secret:
            secretName: kafka-cluster-cluster-ca-cert
            items:
              - key: ca.p12
                path: cluster-ca.p12

---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: microservices
spec:
  type: ClusterIP
  selector:
    app: order-service
  ports:
    - name: http
      port: 8083
      targetPort: 8083
